--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,4 @@
-group 'flutter.overlay.window.flutter_overlay_window'
+group 'flutter.overlay.window.flutter_overlay_window2'
 version '1.0'
 
 buildscript {
