--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_overlay_window
+name: flutter_overlay_window2
 description: Flutter plugin for displaying your flutter app over other apps on the screen
 version: 0.4.5
 homepage: https://github.com/X-SLAYER/flutter_overlay_window
@@ -20,5 +20,5 @@ flutter:
   plugin:
     platforms:
       android:
-        package: flutter.overlay.window.flutter_overlay_window
-        pluginClass: FlutterOverlayWindowPlugin
+        package: flutter.overlay.window.flutter_overlay_window2
+        pluginClass: FlutterOverlayWindowPlugin2
