--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,5 @@
+package android
+
 group 'flutter.overlay.window.flutter_overlay_window2'
 version '1.0'
 
@@ -23,7 +25,7 @@ apply plugin: 'com.android.library'
 
 android {
     if (project.android.hasProperty("namespace")) {
-        namespace 'flutter.overlay.window.flutter_overlay_window'
+        namespace 'flutter.overlay.window.flutter_overlay_window2'
     }
 
     compileSdk 34
