--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,3 @@
-package android
-
 group 'flutter.overlay.window.flutter_overlay_window2'
 version '1.0'
 
@@ -38,4 +36,8 @@ android {
     defaultConfig {
         minSdkVersion 16
     }
+}
+
+dependencies {
+    implementation 'org.jetbrains:annotations:15.0'
 }
